--- a/index.html
+++ b/index.html
@@ -32,15 +32,16 @@
         var mydata = data
         var selectedId = ""
         var input = ""
+        var trackName = ""
         $("#genre-list").change(function () {
             console.log(this.value)
             selectedId = this.value
         });
 
-        $("#submit").click(function () {
+        $("#submit").click(function (event) {
             input = $('input').val()
             console.log(input)
-
+            event.preventDefault()
             $.ajax({
                 type: "GET",
                 data: {
@@ -59,10 +60,18 @@
                 success: function (data) {
                     console.log(data);
 
-                    var trackName = JSON.stringify(data.message.body.track_list[0].track.track_name)
-                    trackName = trackName.replace('"', '')
+                    if (data.message.body.track_list[0]) {
+                        trackName = JSON.stringify(data.message.body.track_list[0].track.track_name)
+                        artistName = JSON.stringify(data.message.body.track_list[0].track.artist_name)
 
-                    $('div').append($(`<p>${trackName}</p>`));
+                        trackNameParse = JSON.parse(trackName)
+                        artistNameParse = JSON.parse(artistName)
+                        // trackName = trackName.replace('"', '')
+
+                        $('div').append($(`<p>${trackNameParse}</p>`));
+                        $('div').append($(`<p>${artistNameParse}</p>`));
+
+                    } 
 
                 },
                 error: function (jqXHR, textStatus, errorThrown) {
@@ -70,6 +79,7 @@
                     console.log(textStatus);
                     console.log(errorThrown);
                 }
+
             });
 
         })
@@ -84,10 +94,14 @@
                 var genreID = mydata.message.body.music_genre_list[i].music_genre.music_genre_id
 
                 $('select').append($(`<option value="${genreID}">${genres}</option>`));
+
             }
         }
 
-        // }
+
+
+
+
 
         // Music APIs
         // In order to get locations from song lyrics
@@ -102,45 +116,6 @@
         // "https://api.musixmatch.com/ws/1.1/music.genres.get"
 
 
-        // 
-
-        // $.ajax({
-        //     type: "GET",
-        //     data: {
-        //         apikey: "4d79a850d35d2e78003074885fedf889",
-        //         // music_genre_parent_id: "2",
-        //         // page_size: "25",
-        //         format: "jsonp",
-        //         // page: '1',
-        //         callback: "jsonp_callback"
-        //     },
-        //     url: "https://api.musixmatch.com/ws/1.1/music.genres.get",
-        //     dataType: "jsonp",
-        //     jsonpCallback: 'jsonp_callback',
-        //     contentType: 'application/json',
-        //     success: function (data) {
-
-        //         console.log(data.message.body)
-
-        //         for (var i = 0; i < 363; i++) {
-
-        //             if (data.message.body.music_genre_list[i].music_genre) {
-        //                 if (data.message.body.music_genre_list[i].music_genre.music_genre_parent_id === 34) {
-
-        //                     console.log(data.message.body.music_genre_list[i].music_genre.music_genre_name + ", " + data.message.body.music_genre_list[i].music_genre.music_genre_id);
-        //                 }
-        //             }
-        //         }
-
-        //     },
-        //     error: function (jqXHR, textStatus, errorThrown) {
-        //         console.log(jqXHR);
-        //         console.log(textStatus);
-        //         console.log(errorThrown);
-        //     }
-        // });
-
-        // }
 
 
 
