--- a/index.html
+++ b/index.html
@@ -6,14 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
+
+    <link rel="stylesheet" href="style.css" />
+
     <title>Document</title>
 </head>
 
 <body>
     <container>
         <label for="Genres">Choose a genre:</label>
-        <select name="Genres" id="genre-list">
+        <select class="genres" name="Genres" id="genre-list">
             <option value="choose">Choose a genre from list</option>
+        </select>
+
+        <label for="results">Number of records</label>
+        <select class="records" name="results" id="num-records">
+            <option value="choose"></option>
+            <option value="choose">5</option>
+            <option value="choose">10</option>
+            <option value="choose">15</option>
         </select>
 
         <form>
@@ -21,7 +32,8 @@
         </form>
 
         <button id="submit">Submit</button>
-        <div></div>
+        <a></a>
+        <h2></h2>
 
 
         <!-- David -->
@@ -29,167 +41,13 @@
     </container>
 
 
+    <div class="img"></div>
+
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type='text/javascript' src='music-genre.json'></script>
-    <script type="text/javascript">
-
-        document.cookie = "Set-Cookie: SameSite=None; Secure"
-
-        var mydata = data
-        var selectedId = ""
-        var input = ""
-        var trackName = ""
-        $("#genre-list").change(function () {
-            // console.log(this.value)
-            selectedId = this.value
-        });
-
-        $("#submit").click(function (event) {
-            input = $('input').val()
-            // console.log(input)
-
-            // 
-            mapboxgl.accessToken = 'pk.eyJ1IjoiZHJvbWFuMDkiLCJhIjoiY2tpcGFzbm1nMGJkazJxbzFsOGg3dW5ueCJ9.nKYluwYKT0XqFDXaafIJTQ';
-            var city = input
-            var queryUrl = "https://api.mapbox.com/geocoding/v5/mapbox.places/" + city + ".json?access_token=pk.eyJ1IjoiZHJvbWFuMDkiLCJhIjoiY2tpcGFzbm1nMGJkazJxbzFsOGg3dW5ueCJ9.nKYluwYKT0XqFDXaafIJTQ"
-
-            $.ajax({
-                url: queryUrl,
-                method: "Get"
-            }).then(function (response) {
-                console.log(response)
-                var lng = response.features[0].center[0];
-                var lat = response.features[0].center[1];
-                console.log(lng, lat)
-
-
-                var map = new mapboxgl.Map({
-                    container: 'map',
-                    style: 'mapbox://styles/mapbox/streets-v11', // stylesheet location
-                    center: [lng, lat], // starting position [lng, lat]
-                    zoom: 8 // starting zoom
-                });
-
-            })
-
-            console.log(map)
-
-
-            // 
-
-            event.preventDefault()
-            $.ajax({
-                type: "GET",
-                data: {
-                    apikey: "4d79a850d35d2e78003074885fedf889",
-                    q_lyrics: input,
-                    f_music_genre_id: selectedId,
-                    page_size: "25",
-                    format: "jsonp",
-                    page: '1',
-                    callback: "jsonp_callback"
-                },
-                url: "https://api.musixmatch.com/ws/1.1/track.search",
-                dataType: "jsonp",
-                jsonpCallback: 'jsonp_callback',
-                contentType: 'application/json',
-                success: function (data) {
-                    // console.log(data);
-
-                    if (data.message.body.track_list[0]) {
-                        trackName = JSON.stringify(data.message.body.track_list[0].track.track_name)
-                        artistName = JSON.stringify(data.message.body.track_list[0].track.artist_name)
-
-                        trackNameParse = JSON.parse(trackName)
-                        artistNameParse = JSON.parse(artistName)
-
-                        $('div').append($(`<p>${trackNameParse}</p>`));
-                        $('div').append($(`<p>${artistNameParse}</p>`));
-
-                    }
-
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    console.log(jqXHR);
-                    console.log(textStatus);
-                    console.log(errorThrown);
-                }
-
-            });
-
-        })
-
-        for (var i = 0; i < 360; i++) {
-
-            if (mydata.message.body.music_genre_list[i].music_genre.music_genre_parent_id === 34) {
-                // console.log(mydata.message.body.music_genre_list[i].music_genre.music_genre_name)
-
-                var genres = mydata.message.body.music_genre_list[i].music_genre.music_genre_name
-
-                var genreID = mydata.message.body.music_genre_list[i].music_genre.music_genre_id
-
-                $('select').append($(`<option value="${genreID}">${genres}</option>`));
-
-            }
-        }
-
-        // David
-
-
-
-        // var key = "55ad3984ce14bc14559d41e350f4290e"
-        // var quryUrl = "https://api.musixmatch.com/ws/1.1/chart.artists.get?format=jsonp&callback=callback&country=us&apikey=55ad3984ce14bc14559d41e350f4290e"
-        // $.ajax({
-        //     url: quryUrl,
-        //     method: "GET"
-        // }).then(function (response) {
-        //     console.log(response)
-        // })
-
-
-        // var imgUrl = "https://pixabay.com/api/?key=19570887-9ab24a9c116677c7d4d20872b&q=chicago&image_type=photo"
-        // $.ajax({
-        //     url: imgUrl,
-        //     method: "GET"
-        // }).then(function (img) {
-        //     console.log(img)
-        // })
-
-
-
-        // Music APIs
-        // In order to get locations from song lyrics
-        // Use the MusixMatch API
-        // track.search API 
-        // "https://api.musixmatch.com/ws/1.1/track.search"
-
-        // And be able to filter by genre
-        // Use the MusixMatch API
-        // Select from genre list using the 
-        // music.genres.get
-        // "https://api.musixmatch.com/ws/1.1/music.genres.get"
-
-
-
-
-
-
-        // Integrate the track-search and genre api on the term
-
-        // Music add-ons
-            // Get song chords with songsterr
-                // http://www.songsterr.com/a/ra/songs.json?pattern=Marley
-
-
-
-
-
-
-
-
-    </script>
+    <script type='text/javascript' src="script.js"></script>
 
 </body>
 
