added photo random and track search desc

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 
         <label for="results">Number of records</label>
         <select class="records" name="results" id="num-records">
-            <option value="choose"></option>
-            <option value="choose">5</option>
-            <option value="choose">10</option>
-            <option value="choose">15</option>
+            <option value="5"></option>
+            <option value="5">5</option>
+            <option value="10">10</option>
+            <option value="15">15</option>
         </select>
 
         <form>
@@ -33,7 +33,7 @@
 
         <button id="submit">Submit</button>
         <a></a>
-        <h2></h2>
+        <h4></h4>
 
 
         <!-- David -->
