added padding to container

--- a/index.html
+++ b/index.html
@@ -32,6 +32,15 @@
 
         <br>
         <br>
+        <div class="container">
+            <style>
+                div {
+                  padding-top: 50px;
+                  padding-right: 30px;
+                  padding-bottom: 50px;
+                  padding-left: 10px;
+                }
+                </style>
 
         <div class="row">
             <p style="color:white">Type the name of the city:</p>
@@ -45,6 +54,8 @@
                             <span class="white-text">Below is a list of songs from your chosen city:</span>
                             <div class="card-content white">
                                 <ul class="collection">
+                                    <li class="collection-item"></li>
+                                    <li class="collection-item"></li>
                                     <li class="collection-item"></li>
                                     <li class="collection-item"></li>
                                     <li class="collection-item"></li>
@@ -89,6 +100,7 @@
                   </div>
                 </div>
               </div>
+        </div>
                         
             
 
