Monday save work without front end

--- a/index.html
+++ b/index.html
@@ -4,18 +4,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <script src='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.js'></script>
+
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
 
     <link rel="stylesheet" href="style.css" />
 
-    <title>Document</title>
+    <title>Rock and Roam</title>
 </head>
 
+
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <body>
+  
+    
+
     <container>
         <label for="Genres">Choose a genre:</label>
-        <select class="genres" name="Genres" id="genre-list">
+        <select class="genres" id="genre-list">
             <option value="choose">Choose a genre from list</option>
         </select>
 
@@ -34,6 +41,25 @@
         <button id="submit">Submit</button>
         <a></a>
         <h4></h4>
+
+        <div class="row">
+          <div class="col s8 m7">
+            <div class="card">
+              <div class="card-image">
+                <!-- place picture link here -->
+                <!-- <img class="responsive-img" src=""> -->
+                <img src="">
+                <span class="card-title">City Images</span>
+              </div>
+              <div class="card-content">
+                <p>This image is of your chosen city.</p>
+              </div>
+              <div class="card-action">
+                <a href="#">This is a link</a>
+              </div>
+            </div>
+          </div>
+        </div>
 
 
         <!-- David -->
