--- a/image.html
+++ b/image.html
@@ -15,18 +15,30 @@
     <!-- <script type='text/javascript' src="script.js"></script> -->
     <script>
 
-        var imgUrl = `https://pixabay.com/api/?key=19570887-9ab24a9c116677c7d4d20872b&q=chicago&image_type=photo`
-        $.ajax({
-            url: imgUrl,
-            method: "GET"
-        }).then(function (img) {
-            console.log(img)
-            var imgCode = img.hits[0].largeImageURL
-            console.log(imgCode)
-            var imgDiv = $("<img>")
-            imgDiv.attr("src", imgCode)
-            $(".img").append(imgDiv)
+        var trackId = "84499332"
 
+        $.ajax({
+            type: "GET",
+            data: {
+                apikey: "4d79a850d35d2e78003074885fedf889",
+                track_id: trackId,
+                format: "jsonp",
+                callback: "jsonp_callback",
+            },
+            url: "https://api.musixmatch.com/ws/1.1/track.lyrics.get",
+            dataType: "jsonp",
+            jsonpCallback: 'jsonp_callback',
+            contentType: 'application/json',
+            success: function (lyricsData) {
+
+                console.log(lyricsData.message.body.lyrics.lyrics_body)
+
+            },
+            error: function (jqXHR, textStatus, errorThrown) {
+                console.log(jqXHR);
+                console.log(textStatus);
+                console.log(errorThrown);
+            }
         })
     </script>
 </body>
