updated input boxes

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
             </div>
         </nav>
     </nav>
+   
 
     <div style="background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrvUnLXJgvbjqTvDR00VY-TOG7mcMteKcBng&usqp=CAU')"
         alt="music image" width=500px height=500px;>
-
-        <br>
-        <br>
+    <br>
+    <br>
         <div class="container">
             <style>
                 div {
@@ -49,22 +49,18 @@
                 <a class="waves-effect waves-light btn">enter</a>
 
                 <div class="row">
-                    <div class="col s12">
-                        <div class="card-panel teal">
-                            <span class="white-text">Below is a list of songs from your chosen city:</span>
-                            <div class="card-content white">
-                                <ul class="collection">
-                                    <li class="collection-item"></li>
-                                    <li class="collection-item"></li>
-                                    <li class="collection-item"></li>
-                                    <li class="collection-item"></li>
-                                    <li class="collection-item"></li>
-                                    <li class="collection-item"></li>
-                                </ul>
-                            </div>
+                    <div class="col s12 m12">
+                      <div class="card teal">
+                          <div style="padding: 10px;">
+                        <div class="card-content white-text">
+                          <span class="card-title">City Song List:</span>
+                          <p>Song list.</p>
                         </div>
+                          </div>
+                      </div>
                     </div>
-                </div>
+                  </div>
+
                 <br>
                 <br>
                 <br>
