Fix button disappear

--- a/index.html
+++ b/index.html
@@ -19,11 +19,21 @@
     <nav class="purple">
         <div class="nav-wrapper">
             <a href="#" class="brand-logo center">Rock and Roam</a>
-            <ul id="nav-mobile" class="left hide-on-med-and-down">
+            <!-- <ul id="nav-mobile" class="left hide-on-med-and-down"> -->
         </div>
     </nav>
 
     <br>
+
+    <div class="row">
+        <form class="col s12">
+            <div class="input-group-button">
+                <a class="waves-effect waves-light btn" id="start">start</a>
+            </div>
+        </form>
+    </div>
+
+
     <container>
 
         <div class="row">
@@ -44,6 +54,7 @@
                 </select>
             </form>
 
+            
             <div class="col s6">
                 <div id='map' style='width: 400px; height: 300px;'></div>
             </div>
@@ -80,16 +91,6 @@
         <div class="img"></div>
 
     </container>
-    <!-- Genre -->
-
-    <!-- Number of records -->
-
-    <!-- Input -->
-
-    <!-- Button -->
-
-
-
 
     <!-- Script links -->
 
