added onclick hide code

--- a/index2.html
+++ b/index2.html
@@ -16,6 +16,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
 <body>
+    <div id="siteDiv">
     <!-- <div class="container"></div> -->
     <nav class="purple">
         <div class="container">
@@ -61,13 +62,14 @@
 
     <!--JavaScript at end of body for optimized loading-->
 
-    <!-- <script scr="script.js"> -->
+    <script scr="script2.js">
     <script>
         $(document).ready(function () {
             console.log($('.parallax'))
             console.log($('.parallax').parallax())
         });
     </script>
+    </div>
 </body>
 </html>
 
@@ -78,5 +80,3 @@
 
 
 
-</body>
-</html>
