--- a/index.html
+++ b/index.html
@@ -7,26 +7,10 @@
     <link rel="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.css">
     <link rel="stylesheet" href="./style.css">
 
-    <title>Document</title>
+    <title>Rock and Roam</title>
 
 </head>
 <body>
-    <!-- <style>
-        img {
-  border-radius: 8px;
-}
-        body {
-            margin: 80px auto;
-            text-align: center;
-            background-color: #e4ebe8;
-           border-radius: 10px;
-        border: 4px double #cccccc;
-        font-size:28px;
-        width: 300px;
-        
-
-        }
-    </style> -->
 
     <div class="container">
         <div class="row">
@@ -38,10 +22,10 @@
         </div>
     </div> 
      <button type="button">Submit</button>
-     <h2>Rounded Images</h2>
-<p>Use the border-radius property to create rounded images:</p>
+     <h2>Music lovers all around the world</h2>
+<p></p>
 
-<img src="m" alt="" style="width:150px">
+<img src="Chicago" alt="" style="width:150px">
     
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
