--- a/index1.html
+++ b/index1.html
@@ -9,11 +9,11 @@
     
     <!-- Personal CSS -->
     <link rel="stylesheet" href="style1.css">
-    <title>Project 1</title>
+    <title>Rock and Roam</title>
 </head>
 <body>
     <header class="subnav-hero-section">
-        <h1 class="subnav-hero-headline">Music<small>Listeners</small></h1>
+        <h1 class="subnav-hero-headline">Rock and Roam<small>Lyrics </small></h1>
             <ul class="subnav-hero-subnav">
                 <li><a href="#" class="is-active">Music!..</a></li>
                 <li><a href="index.html">What's that one part?</a></li>
