--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         </div>
 
         <div class="col s6">
-            <div id='map' style='width: 400px; height: 300px;'></div>
+            <div id='map' style='margin: 30px; width: 400px; height: 400px;border-radius: 50%;'></div>        
         </div>
 
     </div>
