changed paralax image, and added footer

--- a/newpage.html
+++ b/newpage.html
@@ -58,7 +58,7 @@
 
     <div class="parallax-container">
         <div class="parallax"><img
-                src="https://c8.alamy.com/comp/E6ANCR/music-colors-background-meaning-songs-singing-and-musical-E6ANCR.jpg">
+                src="https://i.pinimg.com/originals/f7/3a/5b/f73a5b4b7262440684a2b5c39e684304.jpg">
         </div>
     </div>
     </div>
