Fixed issue with city entry text box

--- a/index.html
+++ b/index.html
@@ -81,10 +81,9 @@
                 <form class="col s12">
                     <div class="row">
                         <div class="input-field col s6">
-                            <textarea id="city-input" class="materialize-textarea"></textarea>
+                            <input id="city-input" class="materialize-textarea" type="text">
                             <label for="textarea1">Enter city, state, or country here</label>
                         </div>
-
                     </div>
                 </form>
 
@@ -95,7 +94,6 @@
                         </div>
                     </form>
                 </div>
-                <!-- <a class="waves-effect waves-light btn"><i class="material-icons left">music_note</i>button</a> -->
             </div>
         </div>
     </div>
