changed font, added pic

--- a/index3.html
+++ b/index3.html
@@ -47,10 +47,10 @@
 
         <div class="row container">
             <h2 class="header">Rock and Roam</h2>
-            <p class="grey-text text-darken-3 lighten-3">Welcome to Rock and Roam. An interactive website for music
+            <p style="font-size: x-large;color:crimson">Welcome to Rock and Roam. An interactive website for music
                 lovers and those with wonderlust alike. Here we have incorporated travel with music. Just type in your
                 favorite city and see
-                the music that was inspired by it. Come and check us out, click the button below and start your own
+                the music that was inspired by it. Come and check us out and start your own
                 musical journey.
             </p>
 
@@ -110,13 +110,20 @@
         </div>
     </div>
 
+    <div class="parallax-container">
+        <div class="parallax img">
+            <img
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQPEYu6Gbj4fXGc4GsQzKHjPCusGsiZZ0mopA&usqp=CAU" alt=musician image>
+        </div>
+    </div>
+
     
 
     
 
     <!--  -->
 
-    <div class="row body">
+    <!-- <div class="row body">
 
         <div class="col s6">
 
@@ -127,8 +134,9 @@
         <div class="col s6">
             <div id='map' style='margin: 30px; width: 400px; height: 400px;border-radius: 50%;'></div>        
         </div>
-
     </div>
+
+    </div> -->
     <!-- map added -->
 
     <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
@@ -137,7 +145,7 @@
     <!-- <div class="img"></div> -->
 
 
-    </div>
+
 
     <footer class="page-footer docs-footer">
         <div class="container">
