--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div class="row container">
             <h2 class="header">Rock and Roam</h2>
-            <p class="grey-text text-darken-3 lighten-3">Welcome to Rock and Roam. An interactive website for music
+            <p style="font-size: x-large;color:crimson">Welcome to Rock and Roam. An interactive website for music
                 lovers and those with wonderlust alike. Here we have incorporated travel with music. Just type in your
                 favorite city and see
                 the music that was inspired by it. Come and check us out, click the button below and start your own
@@ -102,13 +102,13 @@
     <div class="parallax-container">
         <div class="parallax img">
             <img
-                src="https://c8.alamy.com/comp/E6ANCR/music-colors-background-meaning-songs-singing-and-musical-E6ANCR.jpg">
+                src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRyM_hK1v7WqR08ZlKBcWDsQPesGoDBgxiLnQ&usqp=CAU" alt="image of a concert">
         </div>
     </div>
 
     <!--  -->
 
-    <div class="row body">
+    <div id="results" class="row body">
 
         <div class="col s6">
 
