--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Map -->
 
     <link href='https://api.mapbox.com/mapbox-gl-js/v2.0.0/mapbox-gl.css' rel='stylesheet' />
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
@@ -39,7 +40,7 @@
 
         <!-- end david -->
 
-        <div class="row">
+        <div class="row res">
             <div class="row">
                 <form class="col s3">
                     <!-- <label>Choose the genre</label> -->
@@ -77,11 +78,13 @@
                         <a class="waves-effect waves-light btn" id="submit">enter</a>
                     </div>
                 </form>
-                <div class="col s6">
-                    <div id='map' style='width: 400px; height: 300px;'></div>
-                </div>
+               
+            </div>
+            <div class="col ">
+                <div id='map' class="myMap"></div>
             </div>
         </div>
+
 
 
 
