Change style of text

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="row container">
             <h2 class="header">Rock and Roam</h2>
-            <p style="font-size: x-large;color:crimson">Welcome to Rock and Roam. An interactive website for music
+            <p style="font-size: x-large;color: midnightblue; font-family: fantasy">Welcome to Rock and Roam. An interactive website for music
                 lovers and those with wonderlust alike. Here we have incorporated travel with music. Just type in your
                 favorite city and see
                 the music that was inspired by it. Come and check us out, click the button below and start your own
