Add deployed page to readme

--- a/index.html
+++ b/index.html
@@ -125,6 +125,16 @@
         </div>
 
     </div>
+
+    <footer class="page-footer">
+        <div class="container">
+            <div class="3row">
+                <div class="col 16 s12">
+
+                </div>
+            </div>
+        </div>
+    </footer> 
     <!-- map added -->
 
     <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
