Add commenting, clean up code

--- a/index.html
+++ b/index.html
@@ -18,22 +18,6 @@
 
 <body>
 
-    <!-- <nav class="purple">
-        <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">Rock and Roam</a>
-             <ul id="nav-mobile" class="left hide-on-med-and-down"> -->
-    <!-- </div>
-    </nav>  -->
-
-    <!-- <br> -->
-
-    <!-- <div class="row welcome">
-        <form class="col s12">
-            <div class="input-group-button">
-                <a class="waves-effect waves-light btn" id="start">start</a>
-            </div>
-        </form>
-    </div> -->
 
     <!--  -->
     <div class="parallax-container">
@@ -45,6 +29,7 @@
     <div class="section yellow">
 
         <div class="row container">
+            <!-- Landing home page -->
             <h2 class="header">Rock and Roam</h2>
             <p style="font-size: x-large;color: midnightblue; font-family: fantasy">Welcome to Rock and Roam. An interactive website for music
                 lovers and those with wonderlust alike. Here we have incorporated travel with music. Just type in your
@@ -54,11 +39,7 @@
             </p>
 
             <div class="search">
-                <!-- start david -->
-
-                <!-- end david -->
-
-
+        
                 <!-- <div class="row"> -->
                 <div class="row">
                     <form class="col s3">
@@ -68,7 +49,7 @@
 
                         </select>
                     </form>
-
+                        <!-- Number of records selector -->
                     <form class="col s3">
                         <select class="browser-default records" name="results" id="num-records">
                             <option value="5">Select number of records</option>
@@ -82,6 +63,7 @@
 
 
                 <!-- <div class="row"> -->
+                    <!-- Input for city name -->
                 <form class="col s12">
                     <div class="row">
                         <div class="input-field col s6">
@@ -90,7 +72,7 @@
                         </div>
                     </div>
                 </form>
-
+                <!-- Enter button -->
                 <div class="row">
                     <form class="col s6">
                         <div class="input-group-button">
@@ -101,7 +83,7 @@
             </div>
         </div>
     </div>
-
+<!-- Parallax image--default homepage image here, will get replaced after search -->
     <div class="parallax-container">
         <div class="parallax img">
             <img
@@ -115,17 +97,18 @@
     <div id="results" class="row body">
 
         <div class="col s6">
-
+<!-- Appending results to DOM here -->
             <a></a>
             <h4></h4>
         </div>
-
+<!-- Map here -->
         <div class="col s6">
             <div id='map' style='margin: 30px; width: 400px; height: 400px;border-radius: 50%;'></div>        
         </div>
 
     </div>
 
+    <!-- Footer -->
     <footer class="page-footer">
         <div class="container">
             <div class="3row">
@@ -135,14 +118,7 @@
             </div>
         </div>
     </footer> 
-    <!-- map added -->
 
-    <!-- <div id='map' style='width: 400px; height: 300px;'></div> -->
-
-    <!-- <div class="img"></div> -->
-
-
-    <!-- </div> -->
 
     <!-- Script links -->
 
